--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,18 @@ __pycache__/
 # C extensions
 *.so
 
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+core_venv/
+
 # Distribution / packaging
 .Python
-venv/
 build/
 develop-eggs/
 dist/
